Added sanity to the backend, design changes in gallery and responsitivity

--- a/src/styles/Highlights.css
+++ b/src/styles/Highlights.css
@@ -72,7 +72,8 @@
  
   @media (max-width: 768px) {
     .cards-container {
-      flex-direction: column;
+      width: calc(100% - 1rem);
+
     }
   }
   
